--- a/index.html
+++ b/index.html
@@ -15,6 +15,40 @@
     <title>nexter &mdash; your home, your freedom</title>
   </head>
   <body class="container">
-    Testing development
+    <div class="sidebar">
+      Sidebar
+    </div>
+
+    <header class="header">
+      Header
+    </header>
+
+    <div class="realtors">
+      Top 3 realtors
+    </div>
+
+    <section class="features">
+      Features
+    </section>
+
+    <div class="story__pictures">
+      Story Pictures
+    </div>
+
+    <div class="story__content">
+      Story Content
+    </div>
+
+    <section class="homes">
+      Homes
+    </section>
+
+    <div class="section gallery">
+      Gallery
+    </div>
+
+    <footer class="footer">
+      Footer
+    </footer>
   </body>
 </html>
