Adding grid to feature item

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </svg>
         <h4 class="heading-4 heading-4--dark">Secure payments on nexter</h4>
         <p class="feature__text">
-          ariatur voluptatibus quidem consequatur harum, voluptatum mollitia
+          Pariatur voluptatibus quidem consequatur harum, voluptatum mollitia
           quae.
         </p>
       </div>
