--- a/index.html
+++ b/index.html
@@ -92,13 +92,15 @@
 		</section>
 
 		<div class="story__pictures">
-			<img src="img/story-1.jpeg" alt="Couple with new house" class="story__img--1">
-			<img src="img/story-2.jpeg" alt="New house" class="story__img--2">
+			<img src="img/story-1.jpeg" alt="Couple with new house" class="story__img--1" />
+			<img src="img/story-2.jpeg" alt="New house" class="story__img--2" />
 		</div>
 
 		<div class="story__content">
 			<h3 class="heading-3 mb-sm">Happy Customers</h3>
-			<h2 class="heading-2 heading-2--dark mb-md">&ldquo;The best decision of our lives&rdquo;</h2>
+			<h2 class="heading-2 heading-2--dark mb-md">
+				&ldquo;The best decision of our lives&rdquo;
+			</h2>
 			<p class="story__text">
 				Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio
 				necessitatibus pariatur voluptatibus. Quidem consequatur harum volupta!
@@ -107,12 +109,47 @@
 		</div>
 
 		<section class="homes">
+
+			<div class="home">
+				<img src="img/house-1.jpeg" alt="House 1" class="home__img">
+				<svg class="home__like">
+					<use xlink:href="img/sprite.svg#icon-heart-full"></use>
+				</svg>
+				<h5 class="home__name">Beautiful Family House</h5>
+				<div class="home__location">
+					<svg class="home__like">
+						<use xlink:href="img/sprite.svg#icon-map-pin"></use>
+					</svg>
+					<p>USA</p>
+				</div>
+				<div class="home__rooms">
+					<svg class="home__like">
+						<use xlink:href="img/sprite.svg#icon-profile-male"></use>
+					</svg>
+					<p>5 rooms</p>
+				</div>
+				<div class="home__area">
+					<svg class="home__like">
+						<use xlink:href="img/sprite.svg#icon-expand"></use>
+					</svg>
+					<p>325 m<sup>2</sup></p>
+				</div>
+				<div class="home__price">
+					<svg class="home__like">
+						<use xlink:href="img/sprite.svg#icon-key"></use>
+					</svg>
+					<p>$1,200,000</p>
+				</div>
+				
+			</div>
+
 			<div class="home">Home card 1</div>
 			<div class="home">Home card 2</div>
 			<div class="home">Home card 3</div>
 			<div class="home">Home card 4</div>
 			<div class="home">Home card 5</div>
 			<div class="home">Home card 6</div>
+
 		</section>
 
 		<div class="section gallery">
