Markup for one house card done

--- a/index.html
+++ b/index.html
@@ -123,24 +123,24 @@
 					<p>USA</p>
 				</div>
 				<div class="home__rooms">
-					<svg class="home__like">
+					<svg>
 						<use xlink:href="img/sprite.svg#icon-profile-male"></use>
 					</svg>
 					<p>5 rooms</p>
 				</div>
 				<div class="home__area">
-					<svg class="home__like">
+					<svg>
 						<use xlink:href="img/sprite.svg#icon-expand"></use>
 					</svg>
 					<p>325 m<sup>2</sup></p>
 				</div>
 				<div class="home__price">
-					<svg class="home__like">
+					<svg>
 						<use xlink:href="img/sprite.svg#icon-key"></use>
 					</svg>
 					<p>$1,200,000</p>
 				</div>
-				
+				<button class="cta">Contact realtors</button>
 			</div>
 
 			<div class="home">Home card 1</div>
