Added button class to all btns

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio
 				necessitatibus pariatur voluptatibus. Quidem consequatur harum volupta!
 			</p>
-			<button class="btn">Find your own home</button>
+			<button class="btn home__btn">Find your own home</button>
 		</div>
 
 		<section class="homes">
@@ -140,7 +140,7 @@
 					</svg>
 					<p>$1,200,000</p>
 				</div>
-				<button class="btn">Contact realtors</button>
+				<button class="btn home__btn">Contact realtors</button>
 			</div>
 
 			<div class="home">
@@ -173,7 +173,7 @@
 						</svg>
 						<p>$2,750,000</p>
 					</div>
-					<button class="btn">Contact realtors</button>
+					<button class="btn home__btn">Contact realtors</button>
 				</div>
 
 				<div class="home">
@@ -206,7 +206,7 @@
 							</svg>
 							<p>$850,000</p>
 						</div>
-						<button class="btn">Contact realtors</button>
+						<button class="btn home__btn">Contact realtors</button>
 					</div>
 
 					<div class="home">
@@ -239,7 +239,7 @@
 								</svg>
 								<p>$1,950,000</p>
 							</div>
-							<button class="btn">Contact realtors</button>
+							<button class="btn home__btn">Contact realtors</button>
 						</div>
 
 						<div class="home">
@@ -272,7 +272,7 @@
 									</svg>
 									<p>$9,500,000</p>
 								</div>
-								<button class="btn">Contact realtors</button>
+								<button class="btn home__btn">Contact realtors</button>
 							</div>
 
 							<div class="home">
