Test gallery img

--- a/index.html
+++ b/index.html
@@ -310,9 +310,9 @@
 
 		</section>
 
-		<div class="section gallery">
-			Gallery
-		</div>
+		<section class="gallery">
+			<img src="img/gal-1.jpeg" alt="Gallery image 1" class="gallery__img">
+		</section>
 
 		<footer class="footer">
 			Footer
