--- a/index.html
+++ b/index.html
@@ -326,6 +326,11 @@
 					<img src="img/gal-4.jpeg" alt="Gallery image 4" class="gallery__img" />
 			</figure>
 
+			<figure class="gallery__item gallery__item--5">
+					<img src="img/gal-5.jpeg" alt="Gallery image 5" class="gallery__img" />
+			</figure>
+
+
 			
 			
 		</section>
