Add image 6 and position w/ grid

--- a/index.html
+++ b/index.html
@@ -323,13 +323,16 @@
 			</figure>
 
 			<figure class="gallery__item gallery__item--4">
-					<img src="img/gal-4.jpeg" alt="Gallery image 4" class="gallery__img" />
+				<img src="img/gal-4.jpeg" alt="Gallery image 4" class="gallery__img" />
 			</figure>
 
 			<figure class="gallery__item gallery__item--5">
-					<img src="img/gal-5.jpeg" alt="Gallery image 5" class="gallery__img" />
+				<img src="img/gal-5.jpeg" alt="Gallery image 5" class="gallery__img" />
 			</figure>
 
+			<figure class="gallery__item gallery__item--6">
+				<img src="img/gal-6.jpeg" alt="Gallery image 5" class="gallery__img" />
+			</figure>
 
 			
 			
