Add image 7  and position w/ grid

--- a/index.html
+++ b/index.html
@@ -331,7 +331,11 @@
 			</figure>
 
 			<figure class="gallery__item gallery__item--6">
-				<img src="img/gal-6.jpeg" alt="Gallery image 5" class="gallery__img" />
+				<img src="img/gal-6.jpeg" alt="Gallery image 6" class="gallery__img" />
+			</figure>
+
+			<figure class="gallery__item gallery__item--7">
+				<img src="img/gal-7.jpeg" alt="Gallery image 7" class="gallery__img" />
 			</figure>
 
 			
