Add image 8 and grid position

--- a/index.html
+++ b/index.html
@@ -338,7 +338,9 @@
 				<img src="img/gal-7.jpeg" alt="Gallery image 7" class="gallery__img" />
 			</figure>
 
-			
+			<figure class="gallery__item gallery__item--8">
+				<img src="img/gal-8.jpeg" alt="Gallery image 8" class="gallery__img" />
+			</figure>
 			
 		</section>
 
