--- a/index.html
+++ b/index.html
@@ -341,6 +341,30 @@
 			<figure class="gallery__item gallery__item--8">
 				<img src="img/gal-8.jpeg" alt="Gallery image 8" class="gallery__img" />
 			</figure>
+
+			<figure class="gallery__item gallery__item--9">
+				<img src="img/gal-9.jpeg" alt="Gallery image 9" class="gallery__img" />
+			</figure>
+
+			<figure class="gallery__item gallery__item--10">
+				<img src="img/gal-10.jpeg" alt="Gallery image 10" class="gallery__img" />
+			</figure>
+
+			<figure class="gallery__item gallery__item--11">
+				<img src="img/gal-11.jpeg" alt="Gallery image 11" class="gallery__img" />
+			</figure>
+
+			<figure class="gallery__item gallery__item--12">
+				<img src="img/gal-12.jpeg" alt="Gallery image 12" class="gallery__img" />
+			</figure>
+
+			<figure class="gallery__item gallery__item--13">
+				<img src="img/gal-13.jpeg" alt="Gallery image 13" class="gallery__img" />
+			</figure>
+
+			<figure class="gallery__item gallery__item--14">
+				<img src="img/gal-14.jpeg" alt="Gallery image 14" class="gallery__img" />
+			</figure>
 			
 		</section>
 
