--- a/index.html
+++ b/index.html
@@ -369,7 +369,18 @@
 		</section>
 
 		<footer class="footer">
-			Footer
+			<ul class="nav">
+				<li class="nav__item"><a href="#" class="nav__link">Find your dream home</a></li>
+				<li class="nav__item"><a href="#" class="nav__link">Request proposal</a></li>
+				<li class="nav__item"><a href="#" class="nav__link">Download home planner</a></li>
+				<li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
+				<li class="nav__item"><a href="#" class="nav__link">Submit your property</a></li>
+				<li class="nav__item"><a href="#" class="nav__link">Come work with us!</a></li>
+			</ul>
+
+			<p class="copyright">
+				&copy; Copyright 2019 by <a class="copyright__link"href="https://twitter.com/most_mojo">@mostmojo</a>.
+			</p>
 		</footer>
 	</body>
 </html>
