--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 			</ul>
 
 			<p class="copyright">
-				&copy; Copyright 2019 by <a class="copyright__link"href="https://twitter.com/most_mojo">@mostmojo</a>.
+				&copy; Copyright 2019 by <a class="copyright__link"href="https://twitter.com/most_mojo">@mostmojo</a>
 			</p>
 		</footer>
 	</body>
