--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
 
     <div class="realtors">
-      <h3 class="heading-3">Top 3 realtors</h3>
+      <h3 class="heading-3">Feedback</h3>
       <div class="realtors__list">
         <img src="img/realtor-1.jpeg" alt="Realtor 1" class="realtors__img" />
         <div class="realtors__details">
