--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <h4 class="heading-4 heading-4--dark">Like what you see?</h4>
         <p class="feature__text">
           Just call or email and leave the rest to us. It's as easy as clicking the following number:
-          <a href="tel:+35799076435">+357 99076435</a>
+          <a href="tel:+35799076435">(+357) 99076435</a>
           or contact us via email at
           <a href="mailto:info@cyprusallyear.com">info@cyprusallyear.com</a>
         </p>
@@ -112,9 +112,9 @@
         <svg class="feature__icon">
           <use xlink:href="img/sprite.svg#icon-lock"></use>
         </svg>
-        <h4 class="heading-4 heading-4--dark">Secure payments on nexter</h4>
+        <h4 class="heading-4 heading-4--dark">Customer first approach</h4>
         <p class="feature__text">
-          Pariatur voluptatibus quidem consequatur harum, voluptatum mollitia quae.
+          With customers at the heart of what we do, we strive to put smiles on everyone's faces.
         </p>
       </div>
     </section>
