Add more content

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <img src="img/logo.png" alt="Nexter logo" class="header__logo" />
       <h3 class="heading-3">Your own home:</h3>
       <h1 class="heading-1">Find your ideal villa</h1>
-      <button class="btn header__btn">View our properties</button>
+      <a href="#homeGallery" class="btn header__btn">View our properties</a>
       <div class="header__seenon-text">As seen on</div>
       <div class="header__seenon-logos">
         <img src="img/logo-bbc.png" alt="Seen on logo 1" />
@@ -36,13 +36,13 @@
       <div class="realtors__list">
         <img src="img/realtor-1.jpeg" alt="Realtor 1" class="realtors__img" />
         <div class="realtors__details">
-          <h4 class="heading-4 heading-4--light">Eric Jones</h4>
+          <h4 class="heading-4 heading-4--light">Eric Georgiou</h4>
           <p class="realtors__sold">"I was very satisfied with the housing and services."</p>
         </div>
 
         <img src="img/realtor-2.jpeg" alt="Realtor 2" class="realtors__img" />
         <div class="realtors__details">
-          <h4 class="heading-4 heading-4--light">Janie Brown</h4>
+          <h4 class="heading-4 heading-4--light">Elena Monoyios</h4>
           <p class="realtors__sold">"Amazing vacation, quality homes."</p>
         </div>
 
@@ -130,47 +130,46 @@
         &ldquo;The best decision of our lives&rdquo;
       </h2>
       <p class="story__text">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio necessitatibus pariatur
-        voluptatibus. Quidem consequatur harum volupta!
+        "After speaking with Sotos, we experienced the best customer experience, all our needs were catered for and had
+        a beautiful time in Cyprus. We thank you for your services. It was the best decision of our lives."
       </p>
-      <button class="btn home__btn">Find your own home</button>
+      <a href="#homeGallery" class="btn home__btn">Find your own home</a>
     </div>
 
-    <section class="homes">
+    <section id="homeGallery" class="homes">
       <div class="home">
         <img src="img/house-1.jpeg" alt="House 1" class="home__img" />
         <svg class="home__like">
           <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
-        <h5 class="home__name">Beautiful Family House</h5>
+        <h5 class="home__name">Poseidonia 28 Kapparis</h5>
         <div class="home__location">
           <svg class="home__like">
             <use xlink:href="img/sprite.svg#icon-map-pin"></use>
           </svg>
-          <p>USA</p>
+          <p>Kapparis</p>
         </div>
         <div class="home__rooms">
           <svg>
             <use xlink:href="img/sprite.svg#icon-profile-male"></use>
           </svg>
-          <p>5 rooms</p>
+          <p>3 rooms</p>
         </div>
         <div class="home__area">
           <svg>
             <use xlink:href="img/sprite.svg#icon-expand"></use>
           </svg>
           <p>
-            325 m
-            <sup>2</sup>
+            €350 deposit
           </p>
         </div>
         <div class="home__price">
           <svg>
             <use xlink:href="img/sprite.svg#icon-key"></use>
           </svg>
-          <p>$1,200,000</p>
+          <p>€950 / week</p>
         </div>
-        <button class="btn home__btn">Contact realtors</button>
+        <a href="mailto:info@cyprusallyear.com" class="btn home__btn">Contact us</a>
       </div>
 
       <div class="home">
@@ -206,7 +205,7 @@
           </svg>
           <p>$2,750,000</p>
         </div>
-        <button class="btn home__btn">Contact realtors</button>
+        <a href="mailto:info@cyprusallyear.com" class="btn home__btn">Contact us</a>
       </div>
 
       <div class="home">
@@ -242,7 +241,7 @@
           </svg>
           <p>$850,000</p>
         </div>
-        <button class="btn home__btn">Contact realtors</button>
+        <a href="mailto:info@cyprusallyear.com" class="btn home__btn">Contact us</a>
       </div>
 
       <div class="home">
@@ -278,7 +277,7 @@
           </svg>
           <p>$1,950,000</p>
         </div>
-        <button class="btn home__btn">Contact realtors</button>
+        <button class="btn home__btn">Contact us</button>
       </div>
 
       <div class="home">
@@ -314,7 +313,7 @@
           </svg>
           <p>$9,500,000</p>
         </div>
-        <button class="btn home__btn">Contact realtors</button>
+        <button class="btn home__btn">Contact us</button>
       </div>
 
       <div class="home">
@@ -350,7 +349,7 @@
           </svg>
           <p>$600,000</p>
         </div>
-        <button class="btn home__btn">Contact realtors</button>
+        <button class="btn home__btn">Contact us</button>
       </div>
     </section>
 
