--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="header">
       <img src="img/logo.png" alt="Nexter logo" class="header__logo" />
       <h3 class="heading-3">Your own home:</h3>
-      <h1 class="heading-1">Find your ideal villa</h1>
+      <h1 class="heading-1 typed">Find&nbsp;your&nbsp;ideal&nbsp;villa.</h1>
       <a href="#homeGallery" class="btn header__btn">View our properties</a>
       <div class="header__seenon-text">As seen on</div>
       <div class="header__seenon-logos">
@@ -153,7 +153,7 @@
           <svg>
             <use xlink:href="img/sprite.svg#icon-profile-male"></use>
           </svg>
-          <p>3 rooms</p>
+          <p>3 bedrooms</p>
         </div>
         <div class="home__area">
           <svg>
@@ -177,33 +177,32 @@
         <svg class="home__like">
           <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
-        <h5 class="home__name">Modern Glass Villa</h5>
+        <h5 class="home__name">3 Blue Wave Pernera</h5>
         <div class="home__location">
           <svg class="home__like">
             <use xlink:href="img/sprite.svg#icon-map-pin"></use>
           </svg>
-          <p>Canada</p>
+          <p>Pernera</p>
         </div>
         <div class="home__rooms">
           <svg>
             <use xlink:href="img/sprite.svg#icon-profile-male"></use>
           </svg>
-          <p>6 rooms</p>
+          <p>5 bedrooms</p>
         </div>
         <div class="home__area">
           <svg>
             <use xlink:href="img/sprite.svg#icon-expand"></use>
           </svg>
           <p>
-            450 m
-            <sup>2</sup>
+            €2,000 deposit
           </p>
         </div>
         <div class="home__price">
           <svg>
             <use xlink:href="img/sprite.svg#icon-key"></use>
           </svg>
-          <p>$2,750,000</p>
+          <p>€3,500 / week</p>
         </div>
         <a href="mailto:info@cyprusallyear.com" class="btn home__btn">Contact us</a>
       </div>
@@ -213,33 +212,32 @@
         <svg class="home__like">
           <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
-        <h5 class="home__name">Cosy Country House</h5>
+        <h5 class="home__name">10 Plot 35 Blue Water Bay</h5>
         <div class="home__location">
           <svg class="home__like">
             <use xlink:href="img/sprite.svg#icon-map-pin"></use>
           </svg>
-          <p>UK</p>
+          <p>Kapparis</p>
         </div>
         <div class="home__rooms">
           <svg>
             <use xlink:href="img/sprite.svg#icon-profile-male"></use>
           </svg>
-          <p>4 rooms</p>
+          <p>3 bedrooms</p>
         </div>
         <div class="home__area">
           <svg>
             <use xlink:href="img/sprite.svg#icon-expand"></use>
           </svg>
           <p>
-            250 m
-            <sup>2</sup>
+            €300 deposit
           </p>
         </div>
         <div class="home__price">
           <svg>
             <use xlink:href="img/sprite.svg#icon-key"></use>
           </svg>
-          <p>$850,000</p>
+          <p>€850 / week</p>
         </div>
         <a href="mailto:info@cyprusallyear.com" class="btn home__btn">Contact us</a>
       </div>
@@ -249,35 +247,34 @@
         <svg class="home__like">
           <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
-        <h5 class="home__name">Large Rustical Villa</h5>
+        <h5 class="home__name">46 Blue Water Bay Emerald</h5>
         <div class="home__location">
           <svg class="home__like">
             <use xlink:href="img/sprite.svg#icon-map-pin"></use>
           </svg>
-          <p>Portugal</p>
+          <p>Kapparis</p>
         </div>
         <div class="home__rooms">
           <svg>
             <use xlink:href="img/sprite.svg#icon-profile-male"></use>
           </svg>
-          <p>6 rooms</p>
+          <p>4 bedrooms</p>
         </div>
         <div class="home__area">
           <svg>
             <use xlink:href="img/sprite.svg#icon-expand"></use>
           </svg>
           <p>
-            480 m
-            <sup>2</sup>
+            €1,000 deposit
           </p>
         </div>
         <div class="home__price">
           <svg>
             <use xlink:href="img/sprite.svg#icon-key"></use>
           </svg>
-          <p>$1,950,000</p>
+          <p>€2,450 / week</p>
         </div>
-        <button class="btn home__btn">Contact us</button>
+        <a href="mailto:info@cyprusallyear.com" class="btn home__btn">Contact us</a>
       </div>
 
       <div class="home">
@@ -285,35 +282,34 @@
         <svg class="home__like">
           <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
-        <h5 class="home__name">Majestic Palace House</h5>
+        <h5 class="home__name">48 Blue Water Bay Imperial</h5>
         <div class="home__location">
           <svg class="home__like">
             <use xlink:href="img/sprite.svg#icon-map-pin"></use>
           </svg>
-          <p>Germany</p>
+          <p>Kapparis</p>
         </div>
         <div class="home__rooms">
           <svg>
             <use xlink:href="img/sprite.svg#icon-profile-male"></use>
           </svg>
-          <p>18 rooms</p>
+          <p>4 bedrooms</p>
         </div>
         <div class="home__area">
           <svg>
             <use xlink:href="img/sprite.svg#icon-expand"></use>
           </svg>
           <p>
-            4230 m
-            <sup>2</sup>
+            €1,000 deposit
           </p>
         </div>
         <div class="home__price">
           <svg>
             <use xlink:href="img/sprite.svg#icon-key"></use>
           </svg>
-          <p>$9,500,000</p>
+          <p>€2,505 / week</p>
         </div>
-        <button class="btn home__btn">Contact us</button>
+        <a href="mailto:info@cyprusallyear.com" class="btn home__btn">Contact us</a>
       </div>
 
       <div class="home">
@@ -321,35 +317,34 @@
         <svg class="home__like">
           <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
-        <h5 class="home__name">Modern Family Apartment</h5>
+        <h5 class="home__name">Poseidonia 28 Kapparis</h5>
         <div class="home__location">
           <svg class="home__like">
             <use xlink:href="img/sprite.svg#icon-map-pin"></use>
           </svg>
-          <p>Italy</p>
+          <p>Kapparis</p>
         </div>
         <div class="home__rooms">
           <svg>
             <use xlink:href="img/sprite.svg#icon-profile-male"></use>
           </svg>
-          <p>3 rooms</p>
+          <p>3 bedrooms</p>
         </div>
         <div class="home__area">
           <svg>
             <use xlink:href="img/sprite.svg#icon-expand"></use>
           </svg>
           <p>
-            180 m
-            <sup>2</sup>
+            €350 deposit
           </p>
         </div>
         <div class="home__price">
           <svg>
             <use xlink:href="img/sprite.svg#icon-key"></use>
           </svg>
-          <p>$600,000</p>
+          <p>€950 / week</p>
         </div>
-        <button class="btn home__btn">Contact us</button>
+        <a href="mailto:info@cyprusallyear.com" class="btn home__btn">Contact us</a>
       </div>
     </section>
 
@@ -422,8 +417,8 @@
       </ul>
 
       <p class="copyright">
-        &copy; Copyright 2019 by
-        <a class="copyright__link" href="https://twitter.com/most_mojo">@mostmojo</a>
+        &copy; CyprusAllYear &copy; 2020. Site by
+        <a class="copyright__link" href="https://mostmojo.github.io">mojo.digital</a>
       </p>
     </footer>
   </body>
