Add footer logos

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body class="container">
     <div class="sidebar">
-      <button class="nav-btn"></button>
+      <!-- <button class="nav-btn"></button> -->
     </div>
 
     <header class="header">
@@ -98,6 +98,17 @@
 
       <div class="feature">
         <svg class="feature__icon">
+          <use xlink:href="img/sprite.svg#icon-lock"></use>
+        </svg>
+        <h4 class="heading-4 heading-4--dark">Customer first approach</h4>
+        <p class="feature__text">
+          With customers at the heart of what we do, we strive to put smiles on everyone's faces. Read some of our
+          feedback below to see what others think of us.
+        </p>
+      </div>
+
+      <div class="feature">
+        <svg class="feature__icon">
           <use xlink:href="img/sprite.svg#icon-presentation"></use>
         </svg>
         <h4 class="heading-4 heading-4--dark">Like what you see?</h4>
@@ -106,15 +117,6 @@
           <a href="tel:+35799076435">(+357) 99076435</a>
           or contact us via email at
           <a href="mailto:info@cyprusallyear.com">info@cyprusallyear.com</a>
-        </p>
-      </div>
-      <div class="feature">
-        <svg class="feature__icon">
-          <use xlink:href="img/sprite.svg#icon-lock"></use>
-        </svg>
-        <h4 class="heading-4 heading-4--dark">Customer first approach</h4>
-        <p class="feature__text">
-          With customers at the heart of what we do, we strive to put smiles on everyone's faces.
         </p>
       </div>
     </section>
@@ -317,32 +319,33 @@
         <svg class="home__like">
           <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
-        <h5 class="home__name">Poseidonia 28 Kapparis</h5>
+
+        <h5 class="home__name">Sirena Pride Pernera</h5>
         <div class="home__location">
           <svg class="home__like">
             <use xlink:href="img/sprite.svg#icon-map-pin"></use>
           </svg>
-          <p>Kapparis</p>
+          <p>Pernera</p>
         </div>
         <div class="home__rooms">
           <svg>
             <use xlink:href="img/sprite.svg#icon-profile-male"></use>
           </svg>
-          <p>3 bedrooms</p>
+          <p>5 bedrooms</p>
         </div>
         <div class="home__area">
           <svg>
             <use xlink:href="img/sprite.svg#icon-expand"></use>
           </svg>
           <p>
-            €350 deposit
+            €2,000 deposit
           </p>
         </div>
         <div class="home__price">
           <svg>
             <use xlink:href="img/sprite.svg#icon-key"></use>
           </svg>
-          <p>€950 / week</p>
+          <p>€4,000 / week</p>
         </div>
         <a href="mailto:info@cyprusallyear.com" class="btn home__btn">Contact us</a>
       </div>
@@ -408,12 +411,10 @@
 
     <footer class="footer">
       <ul class="nav">
-        <li class="nav__item"><a href="#" class="nav__link">Find your dream home</a></li>
-        <li class="nav__item"><a href="#" class="nav__link">Request proposal</a></li>
-        <li class="nav__item"><a href="#" class="nav__link">Download home planner</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Instagram</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Facebook</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Twitter</a></li>
         <li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
-        <li class="nav__item"><a href="#" class="nav__link">Submit your property</a></li>
-        <li class="nav__item"><a href="#" class="nav__link">Come work with us!</a></li>
       </ul>
 
       <p class="copyright">
