Add redirect in new tab

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 
       <p class="copyright">
         &copy; CyprusAllYear &copy; 2020. Site by
-        <a class="copyright__link" href="https://mostmojo.github.io">mojo.digital</a>
+        <a class="copyright__link" href="https://mostmojo.github.io" target="_blank">mojo.digital</a>
       </p>
     </footer>
   </body>
