--- a/index.html
+++ b/index.html
@@ -414,9 +414,18 @@
         <li class="nav__item">
           <a href="https://www.instagram.com/sotosdimitriou/" class="nav__link" target="_blank">Instagram</a>
         </li>
-        <li class="nav__item"><a href="#" class="nav__link">Facebook</a></li>
+        <li class="nav__item">
+          <a href="https://facebook.com/sotos.dimitriou.1" class="nav__link" target="_blank">Facebook</a>
+        </li>
         <li class="nav__item"><a href="#" class="nav__link">Twitter</a></li>
-        <li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
+        <li class="nav__item">
+          <a
+            href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20a%20rental!"
+            class="nav__link"
+          >
+            Contact us
+          </a>
+        </li>
       </ul>
 
       <p class="copyright">
