--- a/index.html
+++ b/index.html
@@ -171,7 +171,12 @@
           </svg>
           <p>€950 / week</p>
         </div>
-        <a href="mailto:info@cyprusallyear.com" class="btn home__btn">Contact us</a>
+        <a
+          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Poseidonia%20rental!"
+          class="btn home__btn"
+        >
+          Contact us
+        </a>
       </div>
 
       <div class="home">
@@ -206,7 +211,12 @@
           </svg>
           <p>€3,500 / week</p>
         </div>
-        <a href="mailto:info@cyprusallyear.com" class="btn home__btn">Contact us</a>
+        <a
+          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Blue%20Wave%20rental!"
+          class="btn home__btn"
+        >
+          Contact us
+        </a>
       </div>
 
       <div class="home">
@@ -241,7 +251,12 @@
           </svg>
           <p>€850 / week</p>
         </div>
-        <a href="mailto:info@cyprusallyear.com" class="btn home__btn">Contact us</a>
+        <a
+          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Thirty-Five%20Blue%20Water%20Bay%20rental!"
+          class="btn home__btn"
+        >
+          Contact us
+        </a>
       </div>
 
       <div class="home">
@@ -276,7 +291,12 @@
           </svg>
           <p>€2,450 / week</p>
         </div>
-        <a href="mailto:info@cyprusallyear.com" class="btn home__btn">Contact us</a>
+        <a
+          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Forty-Six%20Blue%20Water%20Bay%20rental!"
+          class="btn home__btn"
+        >
+          Contact us
+        </a>
       </div>
 
       <div class="home">
@@ -311,7 +331,12 @@
           </svg>
           <p>€2,505 / week</p>
         </div>
-        <a href="mailto:info@cyprusallyear.com" class="btn home__btn">Contact us</a>
+        <a
+          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Forty-Eight%20Blue%20Water%20Bay%20rental!"
+          class="btn home__btn"
+        >
+          Contact us
+        </a>
       </div>
 
       <div class="home">
@@ -347,7 +372,12 @@
           </svg>
           <p>€4,000 / week</p>
         </div>
-        <a href="mailto:info@cyprusallyear.com" class="btn home__btn">Contact us</a>
+        <a
+          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Sirena%20Bay%20rental!"
+          class="btn home__btn"
+        >
+          Contact us
+        </a>
       </div>
     </section>
 
