Add footer labels and make changes with logo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
 
     <div class="realtors">
-      <h3 class="heading-3">Feedback</h3>
+      <h3 class="heading-3">Customer Reviews</h3>
       <div class="realtors__list">
         <img src="img/realtor-1.jpeg" alt="Realtor 1" class="realtors__img" />
         <div class="realtors__details">
@@ -61,8 +61,8 @@
         </svg>
         <h4 class="heading-4 heading-4--dark">World's best luxury homes</h4>
         <p class="feature__text">
-          Feel free to browse our large selection of 2, 3, 4 and more, bedroomed villas for rent in the areas of Ayia
-          Triada, Ayia Napa, Kapparis, Pernera and Protaras, Cyprus.
+          Browse our large selection of 2, 3, 4+ bedroomed villas for rent in Ayia Triada, Ayia Napa, Kapparis, Pernera
+          and Protaras, Cyprus.
         </p>
       </div>
       <div class="feature">
@@ -81,29 +81,29 @@
         </svg>
         <h4 class="heading-4 heading-4--dark">We are here to assist you</h4>
         <p class="feature__text">
-          If you cannot find the villa or apartment you wish for, don’t worry. If you drop us an email stating where and
-          when you would like a rental property, we will do our best to find one that suits your needs.
+          Can't find what you're looking for? Don’t worry. Email us with when and where you'd like a rental property.
+          Leave the rest to us!
         </p>
       </div>
       <div class="feature">
         <svg class="feature__icon">
-          <use xlink:href="img/sprite.svg#icon-key"></use>
+          <use xlink:href="img/sprite.svg#icon-expand"></use>
         </svg>
         <h4 class="heading-4 heading-4--dark">Fun fact</h4>
         <p class="feature__text">
-          Most of our villas have private swimming pools. If you do not want a pool we can make arrangements to find
+          Most of our villas have private swimming pools. If you don't want a pool, we'll make arrangements to find
           exactly what you need.
         </p>
       </div>
 
       <div class="feature">
         <svg class="feature__icon">
-          <use xlink:href="img/sprite.svg#icon-lock"></use>
+          <use xlink:href="img/sprite.svg#icon-heart"></use>
         </svg>
         <h4 class="heading-4 heading-4--dark">Customer first approach</h4>
         <p class="feature__text">
-          With customers at the heart of what we do, we strive to put smiles on everyone's faces. Read some of our
-          feedback below to see what others think of us.
+          With customers at the heart of our business, we strive to put smiles on people's faces. See what customers
+          have said about us!
         </p>
       </div>
 
@@ -113,9 +113,9 @@
         </svg>
         <h4 class="heading-4 heading-4--dark">Like what you see?</h4>
         <p class="feature__text">
-          Just call or email and leave the rest to us. It's as easy as clicking the following number:
+          Get in touch and we'll handle the rest. Simply call
           <a href="tel:+35799076435">(+357) 99076435</a>
-          or contact us via email at
+          or email us
           <a href="mailto:info@cyprusallyear.com">info@cyprusallyear.com</a>
         </p>
       </div>
@@ -141,34 +141,22 @@
     <section id="homeGallery" class="homes">
       <div class="home">
         <img src="img/house-1.jpeg" alt="House 1" class="home__img" />
-        <svg class="home__like">
-          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
-        </svg>
+        <svg class="home__like"><use xlink:href="img/sprite.svg#icon-heart-full"></use></svg>
         <h5 class="home__name">Poseidonia 28 Kapparis</h5>
         <div class="home__location">
-          <svg class="home__like">
-            <use xlink:href="img/sprite.svg#icon-map-pin"></use>
-          </svg>
+          <svg class="home__like"><use xlink:href="img/sprite.svg#icon-map-pin"></use></svg>
           <p>Kapparis</p>
         </div>
         <div class="home__rooms">
-          <svg>
-            <use xlink:href="img/sprite.svg#icon-profile-male"></use>
-          </svg>
+          <svg><use xlink:href="img/sprite.svg#icon-profile-male"></use></svg>
           <p>3 bedrooms</p>
         </div>
         <div class="home__area">
-          <svg>
-            <use xlink:href="img/sprite.svg#icon-expand"></use>
-          </svg>
-          <p>
-            €350 deposit
-          </p>
+          <svg><use xlink:href="img/sprite.svg#icon-expand"></use></svg>
+          <p>€350 deposit</p>
         </div>
         <div class="home__price">
-          <svg>
-            <use xlink:href="img/sprite.svg#icon-key"></use>
-          </svg>
+          <svg><use xlink:href="img/sprite.svg#icon-key"></use></svg>
           <p>€950 / week</p>
         </div>
         <a
@@ -379,6 +367,89 @@
           Contact us
         </a>
       </div>
+      <div class="home">
+        <img src="img/house-7.jpg" alt="House 1" class="home__img" />
+        <svg class="home__like"><use xlink:href="img/sprite.svg#icon-heart-full"></use></svg>
+        <h5 class="home__name">Periyiali Residence Resort</h5>
+        <div class="home__location">
+          <svg class="home__like"><use xlink:href="img/sprite.svg#icon-map-pin"></use></svg>
+          <p>Konnos</p>
+        </div>
+        <div class="home__rooms">
+          <svg><use xlink:href="img/sprite.svg#icon-profile-male"></use></svg>
+          <p>4+ bedrooms</p>
+        </div>
+        <div class="home__area">
+          <svg><use xlink:href="img/sprite.svg#icon-expand"></use></svg>
+          <p>€ N/A deposit</p>
+        </div>
+        <div class="home__price">
+          <svg><use xlink:href="img/sprite.svg#icon-key"></use></svg>
+          <p>€ N/A / week</p>
+        </div>
+        <a
+          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Periyiali%20rental!"
+          class="btn home__btn"
+        >
+          Contact us
+        </a>
+      </div>
+
+      <div class="home">
+        <img src="img/house-8.jpg" alt="House 1" class="home__img" />
+        <svg class="home__like"><use xlink:href="img/sprite.svg#icon-heart-full"></use></svg>
+        <h5 class="home__name">Periyiali Residence Resort</h5>
+        <div class="home__location">
+          <svg class="home__like"><use xlink:href="img/sprite.svg#icon-map-pin"></use></svg>
+          <p>Konnos</p>
+        </div>
+        <div class="home__rooms">
+          <svg><use xlink:href="img/sprite.svg#icon-profile-male"></use></svg>
+          <p>4+ bedrooms</p>
+        </div>
+        <div class="home__area">
+          <svg><use xlink:href="img/sprite.svg#icon-expand"></use></svg>
+          <p>€ N/A deposit</p>
+        </div>
+        <div class="home__price">
+          <svg><use xlink:href="img/sprite.svg#icon-key"></use></svg>
+          <p>€ N/A / week</p>
+        </div>
+        <a
+          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Periyiali%20rental!"
+          class="btn home__btn"
+        >
+          Contact us
+        </a>
+      </div>
+
+      <div class="home">
+        <img src="img/house-9.jpg" alt="House 1" class="home__img" />
+        <svg class="home__like"><use xlink:href="img/sprite.svg#icon-heart-full"></use></svg>
+        <h5 class="home__name">Periyiali Residence Resort</h5>
+        <div class="home__location">
+          <svg class="home__like"><use xlink:href="img/sprite.svg#icon-map-pin"></use></svg>
+          <p>Konnos</p>
+        </div>
+        <div class="home__rooms">
+          <svg><use xlink:href="img/sprite.svg#icon-profile-male"></use></svg>
+          <p>4+ bedrooms</p>
+        </div>
+        <div class="home__area">
+          <svg><use xlink:href="img/sprite.svg#icon-expand"></use></svg>
+          <p>€ N/A deposit</p>
+        </div>
+        <div class="home__price">
+          <svg><use xlink:href="img/sprite.svg#icon-key"></use></svg>
+          <p>€ N/A / week</p>
+        </div>
+        <a
+          href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20Periyiali%20rental!"
+          class="btn home__btn"
+        >
+          Contact us
+        </a>
+      </div>
     </section>
 
     <section class="gallery">
@@ -447,19 +518,22 @@
         <li class="nav__item">
           <a href="https://facebook.com/sotos.dimitriou.1" class="nav__link" target="_blank">Facebook</a>
         </li>
-        <li class="nav__item"><a href="#" class="nav__link">Twitter</a></li>
         <li class="nav__item">
           <a
             href="mailto:info@cyprusallyear.com?Subject=Hi,%20I%20would%20like%20to%20chat%20about%20a%20rental!"
             class="nav__link"
           >
-            Contact us
+            Contact
           </a>
         </li>
       </ul>
 
       <p class="copyright">
-        &copy; CyprusAllYear &copy; 2020. Site by
+        &copy; CyprusAllYear &copy;
+        <script type="text/javascript">
+          document.write(new Date().getFullYear() + " " + "|");
+        </script>
+        Site by
         <a class="copyright__link" href="https://mostmojo.github.io" target="_blank">mojo.digital</a>
       </p>
     </footer>
