Add CNAME and remove footer copyright

--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
       </ul>
 
       <p class="copyright">
-        &copy; CyprusAllYear &copy;
+        CyprusAllYear &copy;
         <script type="text/javascript">
           document.write(new Date().getFullYear() + " " + "|");
         </script>
@@ -539,28 +539,3 @@
     </footer>
   </body>
 </html>
-<!-- PERIYIALI KONNOS RESIDENCE RESORT
-
-
-
-Periyiali Residence Resort, consists of 41 villas  and is a unique Resort of Luxury Villas, on a rare and exclusive location in Cyprus. This project is located on the famous beach of Konnos and Cape Greco national Park, is an area of outstanding natural beauty, making it one of the most attractive part of Cyprus Villas are granted with Class A energy efficiency rating.
-
-Periyiali Residence Resort is an electronically controlled, gated project, designed to maintain province and tranquility for its residents. It has an underground car access and parking, isolating the project from traffic congestion and noise.
-
-The underground access links to each of the private villas, electronic garage entrance door accommodates the owners with direct access to their residence from their own private basement and parking area.
-
-The modern architectural design reflects the sea waves and colors of the surrounding environment. The large, wide, glass doors allow enjoyment of the stunning views, seen from the villa location. Periyiali Residence Resort is a project where boats can reach the property directly.
-
-
-
-The CLUB HOUSE will include a LOBBY-RECEPTION-MINI MARKET-SPA-CAFï¿½ RESTAURANT - BAR.
-
-The club house will be erected on an unobstructed sea views location on the south-east edge of the project. A three story building will include basement, ground floor, first floor and roof terrace. The building will be erected to high luxurious standards in order to offer to the Resort residences five stars hotel services.
-
-Periyiali Residence Resort is a lifetime project, and a unique opportunity for someone to make his dreams come true and invest wisely. This project will be the Landmark of Protaras for the years to come.
-
-
-
-
-
-For further Information and or enquiries , do not hesitate to contact us. -->
