--- a/index.html
+++ b/index.html
@@ -9,6 +9,34 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
+    <!-- Metadata -->
+    <meta
+      name="description"
+      content="Find your ideal villa in Cyprus. From rentals, management services, you name it, we have it."
+    />
+    <meta property="og:title" content="CyprusAllYear" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.cyprusallyear.net" />
+    <meta property="og:image" content="https://res.cloudinary.com/mostmojo/image/upload/v1588343395/house-1.jpg" />
+    <meta
+      property="og:description"
+      content="Find your ideal summer villa in Cyprus. From rentals, management services, you name it, we have it."
+    />
+    <meta property="og:site_name" content="CyprusAllYear" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:site"
+      content="Find your ideal villa in Cyprus. From rentals, management services, you name it, we have it."
+    />
+    <meta name="author" content="CyprusAllYear" />
+    <meta name="twitter:title" content="CyprusAllYear" />
+    <meta
+      name="twitter:description"
+      content="Find your ideal villa in Cyprus. From rentals, management services, you name it, we have it."
+    />
+    <meta name="twitter:creator" content="CyprusAllYear" />
+    <meta name="twitter:image:src" content="https://res.cloudinary.com/mostmojo/image/upload/v1588343395/house-1.jpg" />
+
     <title>CyprusAllYear &copy; &mdash; your home, your freedom</title>
   </head>
 
